# os-tools

./: .clippy.toml  .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  DESIGN-NOTES.md  README.md  justfile  moss-filesystem-performance.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  release.yaml
boot/: moss-fstx.service
boot/module/: module-setup.sh
boulder/: Cargo.toml  README.md
boulder/data/: recipeTemplate.yaml
boulder/data/profile.d/: default-x86_64.kdl  default-x86_64.yaml
boulder/src/: build.rs  cli.rs  container.rs  draft.rs  env.rs  lib.rs  macros.rs  main.rs  package.rs  paths.rs  profile.rs  recipe.rs  timing.rs  upstream.rs  util.rs
boulder/src/cli/: build.rs  (+3 more)
crates/astr/: Cargo.toml
crates/astr/src/: cow.rs  diesel.rs  lib.rs
crates/config/: Cargo.toml
crates/container/: Cargo.toml  README.md
crates/fanotify/: Cargo.toml
crates/fanotify/src/: lib.rs
crates/fnmatch/: Cargo.toml
crates/git2wrap/: Cargo.toml
crates/gitwrap/: Cargo.toml
crates/stone/: Cargo.toml
crates/stone_recipe/: Cargo.toml
crates/stone_script/: Cargo.toml
crates/tools_buildinfo/: Cargo.toml  build.rs
crates/tracing_common/: Cargo.toml
crates/triggers/: Cargo.toml
crates/vfs/: Cargo.toml
crates/vfs/src/: path.rs
crates/vfs/src/tree/: builder.rs  kind.rs  mod.rs
libstone/: Cargo.toml  build.rs  cbindgen.toml
libstone/examples/: read.c
libstone/src/: lib.rs  payload.rs  stone.h
moss/: Cargo.toml
moss/benches/: dynamic_completion.rs
moss/src/: dependency.rs  dynamic_completion.rs  environment.rs  installation.rs  lib.rs  main.rs  output.rs  request.rs  runtime.rs  signal.rs  state.rs  system_model.rs  util.rs
moss/src/cli/: boot.rs  cache.rs  extract.rs  fetch.rs  index.rs  info.rs  inspect.rs  install.rs  list.rs  mod.rs  remove.rs  repo.rs  search.rs  search_file.rs  state.rs  sync.rs  version.rs
moss/src/client/: boot.rs  cache.rs  extract.rs  fetch.rs  index.rs  install.rs  mod.rs  postblit.rs  prune.rs  remove.rs  self_upgrade.rs  sync.rs  verify.rs
moss/src/db/: migrations.rs  mod.rs
moss/src/db/layout/: mod.rs  types.rs
moss/src/db/layout/migrations/2024-03-04-192634_init/: up.sql
moss/src/db/meta/: mod.rs  types.rs
moss/src/db/meta/migrations/2024-03-03-165811_init/: up.sql
moss/src/db/meta/schemas/: v1_up.sql
moss/src/db/state/: mod.rs  types.rs
moss/src/db/state/migrations/2024-03-04-201550_init/: up.sql
moss/src/db/state/schemas/: v1_up.sql
moss/src/installation/: lockfile.rs
moss/src/output/: tracing.rs  tui.rs
moss/src/package/: meta.rs  mod.rs  render.rs
moss/src/registry/: mod.rs  transaction.rs
moss/src/registry/plugin/: active.rs  cobble.rs  mod.rs  repository.rs
moss/src/repository/: format.rs  handle_outdated.rs  index.rs  manager.rs  mod.rs
moss/src/repository/format/: identifier.rs  root_index.rs
moss/src/system_model/: decode.rs  encode.rs  update.rs
test/: base.yml  boulder-stone.yml
(+93 files in other folders)
