[package]
name = "vfs"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astr.workspace = true
derive_more.workspace = true
elsa = "1.11.2"
indextree.workspace = true
snafu.workspace = true

[lints]
workspace = true
